<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapsFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/play_float"
        android:src="@drawable/ic_baseline_play_arrow_24"
        android:tint="@color/amber"
        app:borderWidth="0dp"
        app:fabCustomSize="86dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="48dp"
        app:useCompatPadding="false">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/save_float"
        android:src="@drawable/ic_baseline_save_48"
        app:borderWidth="0dp"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/stop_float"
        android:src="@drawable/ic_baseline_stop_24"
        app:borderWidth="0dp"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="24dp" />



</androidx.constraintlayout.widget.ConstraintLayout>

